--- a/app/res/layout/fragment_connect_delivery_progress.xml
+++ b/app/res/layout/fragment_connect_delivery_progress.xml
@@ -72,6 +72,7 @@
                     <TextView
                         android:id="@+id/connect_payment_confirm_label"
                         android:layout_width="0dp"
+                        android:textColor="@color/black"
                         android:layout_height="match_parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/connect_payment_confirm_icon"
