--- a/app/res/navigation/nav_graph_connect.xml
+++ b/app/res/navigation/nav_graph_connect.xml
@@ -89,6 +89,9 @@
         <action
             android:id="@+id/action_connect_job_delivery_progress_fragment_to_connect_delivery_fragment"
             app:destination="@id/connect_delivery_fragment" />
+        <action
+            android:id="@+id/action_connect_job_delivery_progress_fragment_to_connect_job_delivery_details_fragment"
+            app:destination="@id/connect_job_delivery_details_fragment" />
     </fragment>
 
     <fragment
