--- a/app/res/navigation/nav_graph_connect.xml
+++ b/app/res/navigation/nav_graph_connect.xml
@@ -3,17 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph_connect"
-    app:startDestination="@id/connect_jobs_list_fragment"
-    >
+    app:startDestination="@id/connect_jobs_list_fragment">
 
     <fragment
         android:id="@+id/connect_jobs_list_fragment"
         android:name="org.commcare.fragments.connect.ConnectJobsListsFragment"
         android:label="fragment_connect_jobs_list"
-        tools:layout="@layout/fragment_connect_jobs_list" >
+        tools:layout="@layout/fragment_connect_jobs_list">
         <action
             android:id="@+id/action_connect_jobs_list_fragment_to_connect_job_intro_fragment"
-            app:destination="@id/connect_job_intro_fragment"  />
+            app:destination="@id/connect_job_intro_fragment" />
         <action
             android:id="@+id/action_connect_jobs_list_fragment_to_connect_job_learning_progress_fragment"
             app:destination="@id/connect_job_learning_progress_fragment" />
@@ -37,11 +36,11 @@
         <action
             android:id="@+id/action_connect_job_intro_fragment_to_connect_downloading_fragment"
             app:destination="@id/connect_downloading_fragment"
-            app:popUpTo="@id/connect_jobs_list_fragment"/>
+            app:popUpTo="@id/connect_jobs_list_fragment" />
         <action
             android:id="@+id/action_connect_job_intro_fragment_to_connect_job_learning_progress_fragment"
             app:destination="@id/connect_job_learning_progress_fragment"
-            app:popUpTo="@id/connect_jobs_list_fragment"/>
+            app:popUpTo="@id/connect_jobs_list_fragment" />
     </fragment>
 
     <fragment
@@ -52,11 +51,11 @@
         <action
             android:id="@+id/action_connect_job_learning_progress_fragment_to_connect_job_delivery_details_fragment"
             app:destination="@id/connect_job_delivery_details_fragment"
-            app:popUpTo="@id/connect_jobs_list_fragment"/>
+            app:popUpTo="@id/connect_jobs_list_fragment" />
         <action
             android:id="@+id/action_connect_job_learning_progress_fragment_to_connect_downloading_fragment"
             app:destination="@id/connect_downloading_fragment"
-            app:popUpTo="@id/connect_jobs_list_fragment"/>
+            app:popUpTo="@id/connect_jobs_list_fragment" />
     </fragment>
 
     <fragment
@@ -67,11 +66,15 @@
         <action
             android:id="@+id/action_connect_job_delivery_details_fragment_to_connect_downloading_fragment"
             app:destination="@id/connect_downloading_fragment"
-            app:popUpTo="@id/connect_jobs_list_fragment"/>
+            app:popUpTo="@id/connect_jobs_list_fragment" />
         <action
             android:id="@+id/action_connect_job_delivery_details_fragment_to_connect_job_delivery_progress_fragment"
             app:destination="@id/connect_job_delivery_progress_fragment"
-            app:popUpTo="@id/connect_jobs_list_fragment"/>
+            app:popUpTo="@id/connect_jobs_list_fragment" />
+
+        <argument
+            android:name="isButtonVisible"
+            app:argType="boolean" />
     </fragment>
 
     <fragment
@@ -111,11 +114,11 @@
         <action
             android:id="@+id/action_connect_downloading_fragment_to_connect_job_learning_progress_fragment"
             app:destination="@id/connect_job_learning_progress_fragment"
-            app:popUpTo="@id/connect_jobs_list_fragment"/>
+            app:popUpTo="@id/connect_jobs_list_fragment" />
         <action
             android:id="@+id/action_connect_downloading_fragment_to_connect_job_delivery_progress_fragment"
             app:destination="@id/connect_job_delivery_progress_fragment"
-            app:popUpTo="@id/connect_jobs_list_fragment"/>
+            app:popUpTo="@id/connect_jobs_list_fragment" />
     </fragment>
 
     <fragment
