--- a/app/res/layout/fragment_connect_job_intro.xml
+++ b/app/res/layout/fragment_connect_job_intro.xml
@@ -127,6 +127,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="20dp"/>
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/cardButtonView"
                     android:layout_width="match_parent"
                     android:elevation="2dp"
                     android:layout_marginTop="16dp"
