--- a/app/res/layout/view_job_card.xml
+++ b/app/res/layout/view_job_card.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content">
 
         <org.commcare.views.connect.connecttextview.ConnectBoldTextView
-            android:id="@+id/connectBoldTextView"
+            android:id="@+id/tvJobTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Infant Child Vaccination By Rama"
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <org.commcare.views.connect.connecttextview.ConnectMediumTextView
-            android:id="@+id/connectMediumTextView"
+            android:id="@+id/tvJobDiscrepation"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -35,7 +35,7 @@
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/connectBoldTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/tvJobTitle" />
 
         <org.commcare.views.connect.connecttextview.ConnectMediumTextView
             android:id="@+id/tvViewMore"
@@ -49,7 +49,7 @@
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/connectMediumTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/tvJobDiscrepation" />
 
         <ImageView
             android:id="@+id/imgJobIcon"
