--- a/app/res/layout/connect_delivery_item.xml
+++ b/app/res/layout/connect_delivery_item.xml
@@ -26,53 +26,37 @@
 
     <org.commcare.views.connect.connecttextview.ConnectMediumTextView
         android:id="@+id/delivery_item_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/delivery_item_reason"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/llDeliveryStatus"
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <org.commcare.views.connect.connecttextview.ConnectBoldTextView
         android:id="@+id/delivery_item_reason"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_marginEnd="8dp"
         android:layout_height="wrap_content"
         android:textColor="@color/connect_yellowish_orange_color"
         android:textSize="12sp"
+        android:layout_marginTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/delivery_item_date"
         app:layout_constraintStart_toStartOf="@+id/delivery_item_name"
         app:layout_constraintTop_toBottomOf="@+id/delivery_item_name" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        app:cardBackgroundColor="@color/connect_light_grey"
-        app:cardCornerRadius="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
-            android:layout_width="wrap_content"
-            android:id="@+id/tv"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="5dp"
-            android:textSize="12sp" />
-
-    </androidx.cardview.widget.CardView>
 
     <org.commcare.views.connect.connecttextview.ConnectRegularTextView
         android:id="@+id/delivery_item_date"
-        android:textSize="12sp"
-        android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/delivery_item_reason"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <org.commcare.views.connect.connecttextview.ConnectRegularTextView
         android:id="@+id/delivery_item_status"
