--- a/app/res/layout/home_screen.xml
+++ b/app/res/layout/home_screen.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:layout_marginStart="5dp"
+        android:padding="10dp"
         android:layout_marginEnd="5dp"
         android:background="@drawable/dots_rect_back"
         android:visibility="gone"
@@ -28,25 +29,28 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/phone_heart"
             />
-        <TextView
+        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
             android:id="@+id/connect_phone_label"
             android:layout_width="0dp"
+            android:textSize="16dp"
             android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/connect_secondary_phone_icon"
             app:layout_constraintEnd_toEndOf="parent"
             />
-        <TextView
+        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
             android:id="@+id/connect_phone_yes_button"
             android:layout_width="wrap_content"
+            android:textSize="18sp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/connect_phone_label"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="10dp"
             android:textColor="@color/blue"
             android:text="@string/connect_payment_confirm_yes"/>
-        <TextView
+        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
             android:id="@+id/connect_phone_no_button"
+            android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/connect_phone_label"
