Update preference dialog title and message

--- a/app/res/xml/preferences_developer.xml
+++ b/app/res/xml/preferences_developer.xml
@@ -174,7 +174,8 @@
         android:key="cc-enable-certificate-transparency"
         android:title="Certificate Transparency"/>
     <EditTextPreference
+        android:dialogMessage="The URL must use the HTTPS protocol"
         android:enabled="true"
         android:key="log_receiver_url"
-        android:title="Log Submission Server"/>
+        android:title="Override Log Submission Server"/>
 </PreferenceScreen>
