--- a/app/res/layout/view_job_card.xml
+++ b/app/res/layout/view_job_card.xml
@@ -15,7 +15,7 @@
             android:id="@+id/tvJobTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Infant Child Vaccination By Rama"
+            android:text=""
             android:textColor="@color/black"
             android:textSize="16sp"
             android:layout_marginTop="16dp"
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:text="Complete Project by 01/31/2024"
+            android:text=""
             android:textColor="@color/connect_grey"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
