--- a/app/res/layout/home_screen.xml
+++ b/app/res/layout/home_screen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cc_core_bg"
@@ -13,100 +13,119 @@
         android:id="@+id/connect_alert_tile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="5dp"
         android:background="@drawable/dots_rect_back"
-        android:visibility="gone"
-        >
+        android:visibility="visible">
+
         <ImageView
             android:id="@+id/connect_secondary_phone_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/phone_heart"
-            />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/connect_phone_label"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/connect_secondary_phone_icon"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintStart_toEndOf="@id/connect_secondary_phone_icon"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/connect_phone_yes_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/connect_phone_label"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="10dp"
+            android:text="@string/connect_payment_confirm_yes"
             android:textColor="@color/blue"
-            android:text="@string/connect_payment_confirm_yes"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/connect_phone_label" />
+
         <TextView
             android:id="@+id/connect_phone_no_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/connect_phone_label"
-            app:layout_constraintEnd_toStartOf="@id/connect_phone_yes_button"
             android:layout_marginEnd="40dp"
+            android:text="@string/connect_payment_confirm_no"
             android:textColor="@color/blue"
-            android:text="@string/connect_payment_confirm_no"/>
+            app:layout_constraintEnd_toStartOf="@id/connect_phone_yes_button"
+            app:layout_constraintTop_toBottomOf="@id/connect_phone_label" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/home_connect_progress_tile"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        >
-        <ProgressBar
-            android:id="@+id/home_connect_prog_bar"
-            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginLeft="@dimen/content_start"
-            android:layout_marginRight="@dimen/content_start"
-            android:indeterminate="false"
-            android:indeterminateOnly="false"
-            android:max="100"
-            android:paddingBottom="@dimen/content_start"
-            android:paddingTop="@dimen/content_start"
-            android:progress="0"
-            android:progressTint="@color/green"
-            android:progressDrawable="@drawable/progressbar_modern"
-            android:layout_marginStart="@dimen/content_start"
-            android:layout_marginEnd="@dimen/content_start"
-            />
-        <TextView
-            android:id="@+id/home_connect_prog_text"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/home_connect_prog_bar"
-            app:layout_constraintTop_toTopOf="@id/home_connect_prog_bar"
-            app:layout_constraintBottom_toBottomOf="@id/home_connect_prog_bar"
-            android:layout_marginStart="5dp"
-            android:textStyle="bold"
-            />
-        <TextView
-            android:id="@+id/home_connect_prog_max_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@id/home_connect_prog_bar"
-            app:layout_constraintTop_toTopOf="@id/home_connect_prog_bar"
-            app:layout_constraintBottom_toBottomOf="@id/home_connect_prog_bar"
-            android:layout_marginEnd="5dp"
-            android:textStyle="bold"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/home_gridview_buttons"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"/>
+            <include
+                android:id="@+id/viewJobCard"
+                layout="@layout/view_progress_job_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/home_connect_progress_tile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="visible">
+
+                <ProgressBar
+                    android:id="@+id/home_connect_prog_bar"
+                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="@dimen/content_start"
+                    android:layout_marginLeft="@dimen/content_start"
+                    android:layout_marginEnd="@dimen/content_start"
+                    android:layout_marginRight="@dimen/content_start"
+                    android:indeterminate="false"
+                    android:indeterminateOnly="false"
+                    android:max="100"
+                    android:paddingTop="@dimen/content_start"
+                    android:paddingBottom="@dimen/content_start"
+                    android:progress="0"
+                    android:progressDrawable="@drawable/progressbar_modern"
+                    android:progressTint="@color/green"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/home_connect_prog_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@id/home_connect_prog_bar"
+                    app:layout_constraintStart_toStartOf="@id/home_connect_prog_bar"
+                    app:layout_constraintTop_toTopOf="@id/home_connect_prog_bar" />
+
+                <TextView
+                    android:id="@+id/home_connect_prog_max_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@id/home_connect_prog_bar"
+                    app:layout_constraintEnd_toEndOf="@id/home_connect_prog_bar"
+                    app:layout_constraintTop_toTopOf="@id/home_connect_prog_bar" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/home_gridview_buttons"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:nestedScrollingEnabled="false"
+                android:scrollbars="vertical" />
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
