--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -153,11 +153,14 @@
     <color name="connect_dark_blue_color">#3942C7</color>
     <color name="connect_darker_blue_color">#353BA8</color>
     <color name="connect_blue_color">#3A42C7</color>
+    <color name="connect_blue_color_50">#803A42C7</color>
     <color name="connect_blue_color_10">#1A3A42C7</color>
     <color name="connect_blackist_dark_blue_color">#141859</color>
     <color name="connect_yellowish_orange_color">#F3B34D</color>
     <color name="connect_light_orange_color">#FFDFD5</color>
     <color name="connect_light_grey">#E5E7EB</color>
+    <color name="connect_lighter_grey">#E2E8F0</color>
+    <color name="connect_middle_grey">#94A3B8</color>
     <color name="connect_subtext">#080B3F</color>
     <color name="connect_secondary_text">#6B7280</color>
     <color name="connect_warning_color">#EA6944</color>
